fixed overflow on mobile view

--- a/style.css
+++ b/style.css
@@ -36,5 +36,8 @@ body {
 .card h5{
   font-weight: bold;
 }
-
+.locs .row {
+  margin-left: 0;
+  margin-right: 0;
+}
 
